HEAD
	+ Remove the use of method canonicalName for greater performance, use
	  object DNs instead
	+ s4sync is stopped before samba daemon to prevent ldb connection errors
	+ s4sync run timestamp is saved only if it doesn't break with an error at
	  the end of the work loop
3.4
	+ Moved to use Net::LDAP::Control::Relax object to relax LDAP restrictions
	  and forced the critical flag to 0 so Samba accepts it
	+ Added EBox::Samba::LdbObject::isCritical method to simplify all checks
	  of the isCriticalSystemObject attribute
	+ EBox::Samba::LdbObject::setCritical cannot use lazy flag to work
	  correctly
	+ Split openchange configuration into its own config file and set correct
	  permissions on it
	+ Remove printers from dependencies list if the module is not installed
	+ Updated EBox::Samba::Users::setCredentials to stop using the lazy flag
	  and added a note about why it cannot be used in the method documentation
	+ Write openchange options to use mysql as backend
	+ Use new addModuleToPostSave Global interface in Provision class
	+ Depend on new samba packaging instead of old samba4 one
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ ad-migrate: Detect offline role owner and seize roles
	+ Fixed setting of printers permissions
	+ s4sync: Check samba daemon is running
	+ Ignored and logged as errors the users, contacts and groups in OpenLDAP
	  that are not linked with Samba objects
	+ Fix edit Group Policy Link after UI changes
	+ Fix GPO models UI
	+ Fix revert resolvconf configuration after joining domain
	+ Fix delete GPLink: use gPLink attribute name as our checkers are
	  case sensitive
	+ Set allow_non_scanned_files = True on samba.conf by default to
	  avoid issues with antivirus when editing files
	+ EBox::Samba::LdbObject::setCritical cannot use lazy flag to work
	  correctly
	+ Fix NT_STATUS_ACCESS_DENIED opening files quering the DOS attributes
	  and passing them to open function